feat: add userDid and profileTypeStreamId map
